# MCDevConsole

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
mods/: .gitignore
mods/MCDevConsole/: manifest.json
mods/MCDevConsole/MCDevConsole/: containers.py  logging.py  loggingSystem.py  modMain.py  network.py  ub.py
plans/: DEADLOCK_ANALYSIS.md  DEADLOCK_FIX_SUMMARY.md  ProjectPlan.md
scripts/: build-release.bat  build-release.ps1  test-build.bat
src/client/cpp/include/MCDevConsole/: AppWindow.h  NetworkServer.h  Protocol.h  WebResource.hpp  WebViewHost.h
src/client/cpp/src/: AppWindow.cpp  NetworkServer.cpp  Protocol.cpp  WebViewHost.cpp  main.cpp
src/client/web/: generate.py  index.html  package-lock.json  package.json  vite.config.js
tests/: ip_test.py  py2_handler.py  py2_test_client.py  test_client.py
